# api-hub

./: .backupignore  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: routing.yaml  search-keys.yaml
config/providers/: abstractapi.yaml  anthropic.yaml  cerebras.yaml  cloudflare.yaml  cohere.yaml  dadata.yaml  elevenlabs.yaml  gemini.yaml  manus.yaml  mistral.yaml  ocr-space.yaml  openai.yaml  openrouter.yaml  pdfgeneratorapi.yaml  pollinations.yaml  scraperapi.yaml
docs/: adr-001-create-api-hub.md  api-contract.md  architecture-notes.md  data-model.md  deployment.md  monitoring.md  provider-config.md  requirements.md  roadmap.md  search-architecture.md  summary.md
incidents/: 2026-06-19-session-violations.md
scripts/: deploy.sh  export_free_keys.py  import_free_keys.py  init_db.sh  search-orchestrator.sh  search-parallel.sh
src/: __init__.py  main.py
src/config/: __init__.py  database.py  settings.py
src/middleware/: __init__.py  metrics.py  rate_limit.py
src/models/: __init__.py  api_key.py  circuit_breaker.py  key_health_log.py  provider.py  quota.py  request_log.py  user.py
src/routes/: chat.py  health.py  keys.py  metrics.py  models.py
src/services/: key_health_check.py
tests/: conftest.py  test-providers.sh  test_chat.py  test_circuit_breaker.py  test_health.py  test_health_check.py  test_keys.py  test_metrics.py  test_models.py
